--- a/GARVIS/packages.config
+++ b/GARVIS/packages.config
@@ -5,6 +5,14 @@
   <package id="Memory.dll.x64" version="1.2.24" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net472" />
+  <package id="NAudio" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Asio" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Core" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Midi" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Wasapi" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.WinForms" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.WinMM" version="2.2.1" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="SharpZipLib" version="1.4.2" targetFramework="net472" />
@@ -43,10 +51,12 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net472" />
@@ -56,4 +66,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
+  <package id="WMPLib" version="1.0.0" targetFramework="net472" developmentDependency="true" />
 </packages>
